# hw7

./: config.ini  main.py  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: b5763f63e08a_add_new_tables.py  d1bcb54977d1_init.py
database/: db.py  models.py
seeds/: grades.py  groups.py  relationship.py  students.py  subjects.py  teachers.py
